envoy/envoy.yaml
#Envoy config that can forward grpc from port 40051 to 50051
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 127.0.0.1, port_value: 9901 }

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 40051 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: grpc }
          http_filters:
          - name: envoy.router
          http2_protocol_options: {}

  clusters:
  - name: grpc
    connect_timeout: 0.25s
    type: static
    # Comment out the following line to test on v6 networks
    #dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    hosts: [{ socket_address: { address: 127.0.0.1, port_value: 50051 }}]
    http2_protocol_options: {}
